--- a/.bazelrc
+++ b/.bazelrc
@@ -1,7 +1,7 @@
 # Bazel settings that apply to this repository.
 # Take care to document any settings that you expect users to apply.
 # Settings that apply only to CI are in .github/workflows/ci.bazelrc
-
+build --nolegacy_external_runfiles
 
 # Load any settings specific to the current user.
 # .bazelrc.user should appear in .gitignore so that settings are not shared with team members
